# stacksTUI

./: .gitignore  Makefile  PKGBUILD  README.md  pyproject.toml  requirements.txt
src/stacksTUI/: __main__.py  _version.py  main.py
src/stacksTUI/css/: about.tcss  game.tcss  menu.tcss  setup.tcss
src/stacksTUI/screens/: about.py  game.py  menu.py  multiplayer.py  rendering.py  setup.py
src/uno/: _version.py  client.py  game.py  main.py  protocol.py  server.py
src/uno/css/: game.tcss  setup.tcss
src/uno/screens/: about.py  game.py  menu.py  multiplayer.py  rendering.py  setup.py
test/: test.py  test_client.py  test_protocol.py  test_server.py
