[project]
name = "stacksTUI"
version = "1.0.0a1"
description = "Textual interface for the stackslib card game engine"
authors = [
    { name = "workonfire", email = "kolucki62@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "stackslib @ git+https://github.com/workonfire/stackslib.git",
    "rich>=13.0.0",
    "textual>=0.47.0",
    "websockets>=12.0"
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/stacksTUI",
]

[project.scripts]
stacksTUI = "stacksTUI.main:main"
